Made charge limit a number entity now, and you can set it

--- a/custom_components/lucidmotors/translations/en.json
+++ b/custom_components/lucidmotors/translations/en.json
@@ -79,6 +79,11 @@
                 "name": "Door locks"
             }
         },
+        "number": {
+            "charging_target": {
+                "name": "Charge limit"
+            }
+        },
         "sensor": {
             "ac_current_limit": {
                 "name": "AC current limit"
