Add a switch to start or stop charging

--- a/custom_components/lucidmotors/translations/en.json
+++ b/custom_components/lucidmotors/translations/en.json
@@ -159,6 +159,9 @@
             }
         },
         "switch": {
+            "charging": {
+                "name": "Charging"
+            },
             "defrost_mode": {
                 "name": "Defrost mode"
             }
