Enable/disable alarm

--- a/custom_components/lucidmotors/translations/en.json
+++ b/custom_components/lucidmotors/translations/en.json
@@ -159,6 +159,9 @@
             }
         },
         "switch": {
+            "alarm": {
+                "name": "Alarm"
+            },
             "charging": {
                 "name": "Charging"
             },
