Change alarm to a select instead of a switch, so that we can set all three modes: on, off, and silent / push notifications only.

--- a/custom_components/lucidmotors/translations/en.json
+++ b/custom_components/lucidmotors/translations/en.json
@@ -158,10 +158,12 @@
                 "name": "Remaining range total"
             }
         },
-        "switch": {
+        "select": {
             "alarm": {
-                "name": "Alarm"
-            },
+              "name": "Alarm"
+            }
+        },
+        "switch": {
             "charging": {
                 "name": "Charging"
             },
