Add battery preconditioning switch

--- a/custom_components/lucidmotors/translations/en.json
+++ b/custom_components/lucidmotors/translations/en.json
@@ -212,6 +212,9 @@
         "switch": {
             "charging": {
                 "name": "Charging"
+            },
+            "battery_preconditioning": {
+                "name": "Battery preconditioning"
             }
         }
     }
