Add all window control, power sensor, update download status sensor

--- a/custom_components/lucidmotors/translations/en.json
+++ b/custom_components/lucidmotors/translations/en.json
@@ -77,6 +77,21 @@
             },
             "rear_cargo": {
                 "name": "Trunk"
+            },
+            "left_front_window": {
+              "name": "Front left window"
+            },
+            "right_front_window": {
+              "name": "Front right window"
+            },
+            "left_rear_window": {
+              "name": "Rear left window"
+            },
+            "right_rear_window": {
+              "name": "Rear right window"
+            },
+            "all_windows": {
+              "name": "All windows"
             }
         },
         "light": {
@@ -202,6 +217,12 @@
             },
             "battery_health_level": {
                 "name": "Battery health level"
+            },
+            "power_usage": {
+              "name": "Power usage"
+            },
+            "update_download_status": {
+              "name": "Update download status"
             }
         },
         "select": {
